# PageRank

./: .gitignore  CMakeLists.txt  README.md
gtests/: CSR-test.cpp  DOK-tests.cpp
informe/: apendices.tex  conclusiones.tex  cualitativos.txt  demostraciones.tex  desarrollo.tex  discucion.tex  discusion.tex  informe.tex  introduccion.tex  paraTestear.txt  referencias.tex  resultados.tex
src/: main.cpp  sparse.cpp  sparse.h
testsPropios/: TODO.txt  correrCualitativos.sh  crearMatrices.py  crearMatricesEps.py  crearMatricesProba.py  crearMatriz.py  testMatrices.py  test_aleatorio_largo.txt  test_aleatorio_largo.txt.outi  test_aleatorio_no_ralo.txt.outi  test_reflexivo_1000.txt  test_reflexivo_1000.txt.outi  test_repetidos_1000.txt  test_repetidos_1000.txt.outi  test_unos_1000.txt  test_unos_1000.txt.outi  test_vacio_1000.txt
testsPropios/resultados/: eps1000_10000_0.8 _9.txt  proba1000_10000_.txt  tiempos1000_750000_0.7_.txt  tiempos1500_2000000_0.7_.txt
testsPropios/tests/: test_1000_10000.txt  test_1000_10000.txt.outi  test_1000_500000.txt.outi
testsPropios/tests/Cualitativos/: cadena4.outi.txt  cadena4.txt  cadena6_v1.outi.txt  cadena6_v1.txt  cadena6_v2.outi.txt  cadena6_v2.txt  cadena6_v3.outi04.txt  cadena6_v3.txt  cadena6v3.outi02.txt  cadena6v3.outi06.txt  cadena6v3.outi08.txt  (+45 more)
testsPropios/tiempos/: eps1000_10000_0.8_0.0001.txt  eps1000_10000_0.8_0.001.txt  eps1000_10000_0.8_0.01.txt  eps1000_10000_0.8_0.1.txt  eps1000_10000_0.8_1e-05.txt  eps1000_10000_0.8_1e-06.txt  eps1000_10000_0.8_1e-07.txt  eps1000_10000_0.8_1e-08.txt  eps1000_10000_0.8_1e-09.txt
